# latech-senior-project

./: .gitignore  .gitignore.orig  README.md  data_handling.py  docker-compose.yml  generate_training_and_validation.py  main.py  requirements.txt
Model_Copies/: Female_5_Model  Male_1_Model  VoiceRecognitionModel_68  VoiceRecognitionModel_75
MyGUICopy/: data.db  main.py  weather.py
Updated_Main/: calen.ui  data.db  main.ui
WebpageDev2/: .gitignore  README.md  apache2.conf  docker-compose.yml  dockerfile  index.html  second.html  test_db.sql  third.php
WebpageDev2/pages/: demo.html  login.html  login.php  second.html  second.php  signup.html  signup.php  third.php
WebpageDev2/php/: DBinfo.php  api.php  connection.php  demo.php  getHardware.php  getdemo.php  gui.php  login.php  logout.php  proxy.php  setup.php  signup.php  support.php  updateSettings.php
WebpageDev2/styles/: demo-style.css  login-style.css  style.css
apps/: calendar.py
commands/: recordAndTranscribe.py
gui/: listener.py  main.py  requirements.txt  sensorman.py  setup.sh  voiceman.py  voiceman.py.orig
gui/apps/: calendar.py  weather.py
gui/commands/: data_handling.py  recordAndTranscribe.py  recordAndTranscribe.py.orig  shared.py
gui/res/: MainWindow.py  Ui_MainWindow.py  User.py
kicad/ICD_2x8_16P_ breadboard_breakout/: ICD_2x8_16P_ breadboard_breakout.kicad_pcb  ICD_2x8_16P_ breadboard_breakout.kicad_prl  ICD_2x8_16P_ breadboard_breakout.kicad_pro  ICD_2x8_16P_ breadboard_breakout.kicad_sch  fp-info-cache
kicad/PIRModule/: PIRModule.kicad_pcb  PIRModule.kicad_prl  PIRModule.kicad_pro  PIRModule.kicad_sch
kicad/SensorModuleBase/: SensorModuleBase.kicad_pcb  SensorModuleBase.kicad_prl  SensorModuleBase.kicad_pro  SensorModuleBase.kicad_sch  fp-info-cache  ~SensorModuleBase.kicad_sch.lck
kicad/UltrasonicPhasedArrayModule/: UltrasonicPhasedArrayModule.kicad_pcb  UltrasonicPhasedArrayModule.kicad_prl  UltrasonicPhasedArrayModule.kicad_pro  (+2 more)
pairing_library/: CMakeLists.txt  main.cpp
pairing_library/include/: pairing.hpp  serialpacket.hpp
pairing_library/include/networking/: addressing.hpp  dhcpman.hpp
pairing_library/src/: dhcp.cpp  serialpacket.cpp
pairing_library/src/lib/: serialib.cpp
pairing_library/src/networking/: addressing.cpp  dhcpman.cpp
prism_sensors/: dbLeaseLoader.py
prism_sensors/at28hc64_reader/: CMakeLists.txt  main.cpp
prism_sensors/at28hc64_reader/include/: at28hc64.hpp
prism_sensors/at28hc64_reader/src/: at28hc64.cpp
prism_sensors/pairing/: CMakeLists.txt  dbLeaseLoader.py  main.cpp
prism_sensors/pairing/include/: pairing.hpp  serialpacket.hpp
prism_sensors/pairing/include/networking/: addressing.hpp  dhcpman.hpp
prism_sensors/pairing/src/: pairing.cpp  serialpacket.cpp
prism_sensors/pairing/src/networking/: addressing.cpp  dhcpman.cpp
prism_servers/: docker-compose.yml
py3_sensor_module/: sensor_module.py
res/: MainWindow.py
sensor_module_base/: CMakeLists.txt  tcp_socket_test.py
sensor_module_base/include/hardware/: parallel_eeprom.hpp  pwmctrl.hpp  serial_interface.hpp
sensor_module_base/include/networking/: httpreqs.hpp  neosocket.hpp  wifi.hpp
sensor_module_base/include/operation/: kantoku.hpp
sensor_module_base/include/operation/sensors/: upa.hpp
sensor_module_base/include/operation/serial/: packet.hpp  session.hpp
sensor_module_base/python3_libs/linux-env/: pair_sim.py  pyvenv.cfg  sensor_module.py
sensor_module_base/python3_libs/linux-env/networking/: dhcpman.py  networking.py
sensor_module_base/python3_libs/linux-env/pairing/: pair_sim.py  pairman.py
sensor_module_base/python3_libs/serial_comms/: pair_sim.py
sensor_module_base/src/: main.cpp  main_eeprom.cpp  testing.cpp
sensor_module_base/src/hardware/: parallel_eeprom.cpp  pwmctrl.cpp  serial_interface.cpp
sensor_module_base/src/networking/: httpreqs.cpp  wifi.cpp
sensor_module_base/src/networking/neosocket/: callbacks.cpp  globals.cpp  socket.cpp
sensor_module_base/src/operation/: kantoku.cpp
sensor_module_base/src/operation/sensors/: upa.cpp
sensor_module_base/src/operation/serial/: packet.cpp  session.cpp
testing/: CYEN48X_UML_DIAGRAMS.mdj
testing/pico_pwm_test/: CMakeLists.txt
testing/pico_pwm_test/include/: Receiver.hpp
testing/pico_pwm_test/src/: Transmitter.cpp
users/: MainWindow.py  Petersons_model  User.py  Waskom_model  automaticDetection2.py  calendar.py  device.py  gui_main.py  key.txt  main.ui  perterson_untitled5.npy  pyvenv.cfg  speech_to_text.py  users.py  weather.py
voice/: .gitignore  Austins_model  LinearModel.py  automate_training.py  data_handling.py  generate_training_and_validation.py  main.py  pyvenv.cfg  record.py  simple_model.py  speech_to_text.py
(+1618 files in other folders)
